# bookpurr

./: README.md  pyproject.toml
src/bookpurr/: __init__.py  chunk_text.py  epub_utils.py  generate.py
test/: chunk_text_test.py  conftest.py
