[project]
name = "bookpurr"
version = "0.1.0"
description = "Generate audio books from EPUB files locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epub2txt>=0.1.6",
    "f5-tts-mlx>=0.1.4",
    "soundfile>=0.12.1",
    "typer>=0.12.5",
]

[project.scripts]
bookpurr = "bookpurr:main"

# Deprecated in uv 0.4.27
[tool.uv]
dev-dependencies = ["ptpython>=3.0.29", "pytest>=8.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
