[project]
name = "bookpurr"
version = "0.1.0"
description = "Generate audio books from EPUB files locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "epub2txt>=0.1.6",
    "f5-tts-mlx>=0.1.4",
    "lxml>=5.3.0",
    "rich>=13.9.3",
    "soundfile>=0.12.1",
    "typer>=0.12.5",
]

[project.scripts]
bookpurr = "bookpurr:app"

# Deprecated in uv 0.4.27
[tool.uv]
dev-dependencies = ["ptpython>=3.0.29", "pytest>=8.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
